# NEMO

./: .gitignore  README.md
nebulastream/: .clang-format  .gitignore  CHANGELOG.md  CHECKLIST.yml  CMakeLists.txt  README.md  RELEASE_NOTES.md  clang_suppressions.txt
nebulastream/cmake/: GuardOnce.cmake  ImportDependencies.cmake  LLVMIRUtil.cmake  NebulaStreamConfig.cmake.in  NebulaStreamTest.cmake  macros.cmake
nebulastream/cmake/docs/: CMakeLists.txt  Doxyfile.in
nebulastream/cmake/release/: PushTag.cmake
nebulastream/cmake/semver/: GetSemanticVersion.cmake  UpdateVersion.cmake
nebulastream/config/: coordinator.yaml  worker.yaml
nebulastream/docker/: README.md
nebulastream/docker/buildImage/: Dockerfile-NES-Build  Dockerfile-NES-Build-alpine-3.15  Dockerfile-NES-Build-ubuntu-18_04  Dockerfile-NES-Build-ubuntu-20_04  Dockerfile-NES-Build-ubuntu-22_04  entrypoint-nes-benchmark.sh  entrypoint-nes-build-cc.sh  entrypoint-nes-build-format-check.sh  entrypoint-nes-build-guard-check.sh  entrypoint-nes-build-macos.sh  entrypoint-nes-build-preamble-check.sh  entrypoint-nes-build.sh  entrypoint-nes-release.sh  entrypoint-prepare-nes-package.sh
nebulastream/docker/devImage/: Dockerfile-NES-Dev-alpine-3.15
nebulastream/docker/executableImage/: Dockerfile-NES-Executable-Multi-Arch  Dockerfile-NES-Executable-alpine-3.15
nebulastream/docker/executableImage/resources/: exdra.csv
nebulastream/grpc/: CoordinatorRPCService.proto  JavaUdfDescriptorMessage.proto  SerializableDataType.proto  SerializableExpression.proto  SerializableOperator.proto  SerializableQueryPlan.proto  SerializableShapeType.proto  WorkerLocation.proto  WorkerRPCService.proto
nebulastream/nes-benchmark/: CMakeLists.txt
nebulastream/nes-benchmark/config-examples/: KafkaYSBQuery.yaml  YSBQuery.yaml
nebulastream/nes-benchmark/config-examples/E2EConfigs/: e2e_test_config.yaml  filter_one_source.yaml  join_multiple_sources.yaml  join_multiple_sources_different_datagenerators.yaml  join_multiple_sources_with_filter.yaml
nebulastream/nes-benchmark/config-examples/Microbenchmarks/: IncrementalPlacementConfig.yaml  QueryMergerBenchmarkConfig.yaml
nebulastream/nes-benchmark/include/: Measurements.hpp
nebulastream/nes-benchmark/include/DataGeneration/: DataGenerator.hpp  DefaultDataGenerator.hpp  YSBDataGenerator.hpp  ZipfianDataGenerator.hpp
nebulastream/nes-benchmark/include/DataProvider/: DataProvider.hpp  InternalProvider.hpp  TupleBufferHolder.hpp
nebulastream/nes-benchmark/include/E2E/: E2ESingleRun.hpp
nebulastream/nes-benchmark/include/Util/: BenchmarkUtils.hpp  ZipfianGenerator.hpp
nebulastream/nes-benchmark/src/: CMakeLists.txt  Measurements.cpp
nebulastream/nes-benchmark/src/DataGeneration/: DataGenerator.cpp  DefaultDataGenerator.cpp  YSBDataGenerator.cpp  YSBKafkaDataGenerator.cpp  ZipfianDataGenerator.cpp
nebulastream/nes-benchmark/src/DataProvider/: DataProvider.cpp  InternalProvider.cpp
nebulastream/nes-benchmark/src/E2E/: E2ERunner.cpp  E2ESingleRun.cpp
nebulastream/nes-benchmark/src/MicroBenchmarks/: BenchmarkOutputChannel.cpp
nebulastream/nes-benchmark/test/: CMakeLists.txt
nebulastream/nes-benchmark/test/test-configs/: filter_one_source.yaml  join_multiple_sources.yaml
nebulastream/nes-client/: CMakeLists.txt
nebulastream/nes-client/include/Client/: QueryConfig.hpp  RemoteClient.hpp
nebulastream/nes-client/src/: CMakeLists.txt
nebulastream/nes-client/src/Client/: CMakeLists.txt  ClientException.cpp  QueryConfig.cpp  RemoteClient.cpp
nebulastream/nes-client/tests/: CMakeLists.txt
nebulastream/nes-client/tests/Client/: RemoteClientTest.cpp
nebulastream/nes-common/: CMakeLists.txt
nebulastream/nes-common/include/Configurations/: BaseConfiguration.hpp  BaseOption.hpp  ConfigOptions.md  ConfigurationException.hpp  EnumOption.hpp  ScalarOption.hpp  SequenceOption.hpp  TypedBaseOption.hpp  WrapOption.hpp
nebulastream/nes-common/include/Exceptions/: RuntimeException.hpp  SignalHandling.hpp
nebulastream/nes-common/include/Util/: BlockingQueue.hpp  NonBlockingMonotonicSeqQueue.hpp  PluginRegistry.hpp  SourceLocation.hpp  StacktraceLoader.hpp  Timer.hpp  VirtualEnableSharedFromThis.hpp
nebulastream/nes-common/src/: CMakeLists.txt
nebulastream/nes-common/src/Configurations/: BaseConfiguration.cpp  BaseOption.cpp  CMakeLists.txt  ConfigurationException.cpp  EnumConfOption.cpp  ScalarOption.cpp  SequenceConfOption.cpp  TypedBaseOption.cpp
nebulastream/nes-common/src/Exceptions/: CMakeLists.txt  NotImplementedException.cpp  RuntimeException.cpp  SignalHandling.cpp
nebulastream/nes-common/src/Util/: CMakeLists.txt  FileMutex.cpp  NonBlockingMonotonicSeqQueue.cpp  StacktraceLoader.cpp  ThreadNaming.cpp
nebulastream/nes-common/tests/: CMakeLists.txt
nebulastream/nes-common/tests/util/: NesBaseTest.cpp  NesBaseTest.hpp
nebulastream/nes-compiler/: CMakeLists.txt
nebulastream/nes-compiler/include/Compiler/: CompilationRequest.hpp  CompilerForwardDeclarations.hpp  JITCompiler.hpp  JITCompilerBuilder.hpp  LanguageCompiler.hpp  SourceCode.hpp
nebulastream/nes-compiler/src/: CMakeLists.txt
nebulastream/nes-compiler/src/Compiler/: CMakeLists.txt  CompilationCache.cpp  CompilationRequest.cpp  CompilationResult.cpp  DynamicObject.cpp  File.cpp  JITCompiler.cpp  JITCompilerBuilder.cpp  SourceCode.cpp
nebulastream/nes-compiler/tests/: CMakeLists.txt
nebulastream/nes-core/: CMakeLists.txt
nebulastream/nes-core/include/API/: Query.hpp  QueryAPI.hpp  WindowedQuery.hpp  Windowing.hpp
nebulastream/nes-core/include/Components/: NesCoordinator.hpp  NesWorker.hpp
nebulastream/nes-core/include/Exceptions/: NesNetworkError.hpp  (+19 more)
nebulastream/nes-core/src/: CMakeLists.txt
nebulastream/nes-core/tests/: CMakeLists.txt
nebulastream/nes-data-types/: CMakeLists.txt
nebulastream/nes-data-types/src/: CMakeLists.txt
nebulastream/nes-data-types/tests/: CMakeLists.txt
nebulastream/nes-runtime/: CMakeLists.txt
nebulastream/nes-runtime/benchmark/: CMakeLists.txt
nebulastream/nes-runtime/src/: CMakeLists.txt
nebulastream/nes-runtime/tests/: CMakeLists.txt
(+3251 files in other folders)
